tests/ui/issues/issue-3993.stderr
error[E0603]: function `fly` is private
  --> $DIR/issue-3993.rs:1:10
   |
LL | use zoo::fly;
   |          ^^^ private function
   |
note: the function `fly` is defined here
  --> $DIR/issue-3993.rs:4:5
   |
LL |     fn fly() {}
   |     ^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0603`.
